# code-mr-reviewer

./: .env.example  .gitignore  README.md  Requirements.md  gitlab_mr_api.txt  pyproject.toml
.opencode/skills/code-review/: SKILL.md
.opencode/skills/gitlab-mr-review/: SKILL.md
.opencode/skills/mr-review/: SKILL.md
.skill/code-review/: SKILL.md
.skill/cross-repo-code-review/: SKILL.md
.skill/gitlab-mr-review/: SKILL.md
.skill/gitlab-mr-review/prompt_templates/: deep-review.md  review.md
.skill/gitlab-mr-review/scripts/: review_gitlab_mr.py
docs/: CROSS_REPO_REVIEW_IMPLEMENTATION_PLAN.md  CROSS_REPO_REVIEW_REQUIREMENTS.md  DESIGN.md  PHASE1_SUMMARY.md  PHASE2_WEBHOOK_INLINE_REVIEW_DESIGN.md  PHASE2_WEBHOOK_INLINE_REVIEW_IMPLEMENTATION_PLAN.md  PHASE2_WEBHOOK_INLINE_REVIEW_REQUIREMENTS.md  WEBHOOK_QUICKSTART.md
docs/decisions/: ADR-001-one-step-vs-two-step-review.md  ADR-002-cross-repo-review-context.md
docs/ideas/: discussion-format.md
src/mr_reviewer/: __init__.py  cli.py  config.py  git.py  gitlab.py  im.py  inline_review.py  markdown_report.py  observability.py  opencode.py  process.py  prompting.py  publication_policy.py  review_result.py  review_routing.py  review_set.py  review_set_publish.py  review_set_report.py  review_set_result.py  reviewer.py  state.py  structured_output.py  webhook.py  welink.py
tests/: test_core.py  test_inline_review.py  test_publication_policy.py  test_review_result.py  test_review_routing.py  test_review_set.py  test_review_set_delivery.py  test_webhook.py  test_workflow.py
(+7 files in other folders)
